# coursework

./: .gitignore
data_collector/: Cargo.toml  Dockerfile  docker-compose.yml
data_collector/src/: collector.rs  main.rs
data_collector/src/binance_collector/: mod.rs
data_collector/src/block_fetcher/: mod.rs
data_collector/src/blocks_collector/: mod.rs
data_collector/src/db/: db.rs  models.rs  schema.rs
data_collector/src/logs_collector/: mod.rs
data_collector/src/logs_processor/: mod.rs  price_agregator.rs  types.rs
data_collector/src/pools_collector/: mod.rs
data_collector/src/price_fetcher/: mod.rs
data_collector/src/raw_csv_processor/: mod.rs  tokens.rs  types.rs
data_collector/src/trace_call/: mod.rs
data_collector/src/utils/: mod.rs
events_collector/: Cargo.toml
events_collector/src/: collector.rs  main.rs
research/: cex_candles.ipynb  model.ipynb  preprocessing.ipynb  scraper.ipynb
