[package]
name = "events_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
async-recursion = "1.0.5"
anyhow = "1.0.79"
csv = "1.3.0"
ethabi = "18.0.0"
rand = "0.8.5"
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
web3 = "0.19.0"
chrono = "0.4"